clang/test/BSC/Negative/Trait/GenericTrait/trait_is_undefined/trait_is_undefined.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

_Impl _Trait F<int> for int;

struct S{
  _Trait F<int>* f;
  _Trait T<int>* t; // expected-error {{explicit specialization of undeclared template _Trait 'T'}}
// expected-error@-1 {{'_Trait T' must be defined before it can be used}}
};

_Trait T<int>* test(){ // expected-error {{explicit specialization of undeclared template _Trait 'T'}}
// expected-error@-1 {{'_Trait T' must be defined before it can be used}}
  int a = 1;
  _Trait T<int>* t = &a; // expected-error {{explicit specialization of undeclared template _Trait 'T'}}
// expected-warning@-1 {{incompatible pointer types initializing '_Trait T *' with an expression of type 'int *'}}

  _Trait T<int>* t2 = ((_Trait T<int>*)&a); // expected-error {{explicit specialization of undeclared template _Trait 'T'}}
// expected-error@-1 {{explicit specialization of undeclared template _Trait 'T'}}

  return &a; // expected-error {{expected a pointer type which has implemented '_Trait T', found 'int'}}
}

_Trait F<int>* get(_Trait P<int>* t) {  // expected-error {{explicit specialization of undeclared template _Trait 'P'}}
// expected-warning@-1 {{declaration of '_Trait P' will not be visible outside of this function}}
// expected-error@-2 {{'_Trait P' must be defined before it can be used}}
  int a = 6;
  int* c = &a;
  *c = 3;
  return c;
}

int main() {
  return 0;
}